# legal-doc-intelligence

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  alembic.ini  create_database.py  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.bat  setup.py  test_db_connection.py
.cursor/rules/: legal-ai.mdc
.github/workflows/: ci.yml  codecov.yml
config/: default.py  logging_config.yaml
docs/: api_examples.md  architecture.md  conf.py  index.rst
examples/: advanced_usage.py  case1.txt  case2.txt  contract1.txt  quick_start.py  sample.txt
legal_doc_intelligence/: __init__.py  analysis.py  database.py  document.py  exceptions.py  schemas.py
legal_doc_intelligence/api/: main.py
legal_doc_intelligence/models/: document.py
legal_doc_intelligence/spiders/: judicial_spider.py
legal_doc_intelligence/utils/: text_cleaner.py
scripts/: init_project.py  run_api.py
src/legal_doc_intelligence/: __init__.py
src/legal_doc_intelligence/api/: app.py  main.py  router.py
src/legal_doc_intelligence/context/: context_manager.py
src/legal_doc_intelligence/database/: db_manager.py  models.py
src/legal_doc_intelligence/evaluation/: evaluator.py
src/legal_doc_intelligence/monitoring/: system_monitor.py
src/legal_doc_intelligence/pipeline/: data_pipeline.py
src/legal_doc_intelligence/processors/: __init__.py  document_processor.py  legal_processors.py  pii_processor.py  source_tracker.py  text_processor.py  vectorization_processor.py
src/legal_doc_intelligence/rag/: __init__.py  base.py  legal_rag.py  rag_system.py
src/legal_doc_intelligence/retrieval/: query_optimizer.py
src/legal_doc_intelligence/scrapers/spiders/: judicial_spider.py
src/legal_doc_intelligence/utils/: __init__.py
src/legal_doc_intelligence/validation/: validation_rules.py
src/legal_doc_intelligence/vectorstore/: __init__.py  base.py  chroma.py  enhanced_chroma.py  faiss_store.py  vector_store.py
tests/: __init__.py  conftest.py  setup_test_env.py  test.env  test_analysis.py  test_api.py  test_basic.py  test_document.py  test_document_processor.py  test_evaluator.py  test_rag.py  test_vectorstore.py  utils.py
tests/test_data/: test_data.json
